--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
         <h1 id="title">Toboolist</h1>
     </header>
 
-
-    <main></main>
+    <main>
+        <div class="container">
+            <div id="buttons">
+                <button class="btn" id="add-task">Add Task</button>
+                <button class="btn" id="add-section">Add Section</button>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
