--- a/index.html
+++ b/index.html
@@ -22,6 +22,51 @@
                 <button class="btn" id="add-task">Add Task</button>
                 <button class="btn" id="add-section">Add Section</button>
             </div>
+
+            <div id="to-dos">
+                <section class="sections">
+                    <ul class="section">
+                        <li class="section-title">New Task</li>
+                        <li>
+                            <ul class="section-todo">
+                                <li class="todo done"> Quarterly Newsletter <span class="chips blue">Editorial</span>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </section>
+                <section class="sections">
+                    <ul class="section">
+                        <li class="section-title">Today</li>
+                        <li>
+                            <ul class="section-todo">
+                                <li class="todo done"> Recruiting blog post <span class="chips blue">Editorial</span>
+                                </li>
+                                <li class="todo done"> Mobile app launch <span class="chips violet">Q1 Goals</span></li>
+                                <li class="todo undone">Interview John H. <span class="chips green">Recruiting</span>
+                                </li>
+                                <li class="todo done">Summit update to mobile storefronts <span
+                                        class="chips orange">Mobile</span></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </section>
+                <section class="sections">
+                    <ul class="section">
+                        <li class="section-title">Upcoming</li>
+                        <li>
+                            <ul class="section-todo">
+                                <li class="todo undone"> Schedule meeting with Alex</li>
+                                <li class="todo done">Homepage refresh <span class="chips pink">Website</span></li>
+                                <li class="todo done">Onboard new Sales team member <span
+                                        class="chips acid">Sales</span></li>
+                                <li class="todo done">Review editorial calendar <span
+                                        class="chips blue">Editorial</span></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </section>
+            </div>
         </div>
     </main>
 </body>
