removed unused id

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
 
     <main>
         <div class="container">
-            <div id="buttons">
+            <div>
                 <button class="btn" id="add-task">Add Task</button>
                 <button class="btn" id="add-section">Add Section</button>
             </div>
-
             <div id="to-dos">
                 <section class="sections">
                     <ul class="section">
