--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
 
     <main>
         <div class="container">
-            <div>
+            <div class="buttons">
                 <button class="btn" id="add-task">Add Task</button>
                 <button class="btn" id="add-section">Add Section</button>
             </div>
+
+            <hr id="divider">
+            </hr>
+
             <div id="to-dos">
+                <!-- Dovrei dare un colore ai "pallini" della lista, ma usando delle immagini non penso si possa fare onestamente
+                Dovrei dare un color all'svg, ma per farlo dovrei usare ::before simulando una lista, non facendone una vera -->
                 <section class="sections">
                     <ul class="section">
                         <li class="section-title">New Task</li>
